<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BnuzChat</string>
    <string name="action_settings">设置</string>
	<string name="StringLogin">登陆</string>
	<string name="StringReg">注册</string>
	<string name="StringUserName">用户</string>
	<string name="StringPassWord">密码</string>
	<string name="StringEmail">邮箱</string>
	<string name="StringConfirmPassWord">确认密码</string>
	<string name="StringRegTips">还没账号?赶紧注册</string>
	<string name="StringLogout">注销</string>
</resources>
