<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <TextView
        android:id="@+id/TV_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="101dp"
        android:text="@string/StringUserName" />

    <EditText
        android:id="@+id/ET_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TV_UserName"
        android:layout_alignBottom="@+id/TV_UserName"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/TV_UserName"
        android:ems="10"
         android:labelFor="@id/ET_UserName"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/TV_PassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TV_UserName"
        android:layout_below="@+id/ET_UserName"
        android:layout_marginTop="46dp"
        android:text="@string/StringPassWord" />

    <EditText
        android:id="@+id/ET_PassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TV_PassWord"
        android:layout_alignBottom="@+id/TV_PassWord"
        android:layout_alignLeft="@+id/ET_UserName"
        android:ems="10"
         android:labelFor="@id/ET_PassWord"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/BT_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/StringLogin" />

    <TextView
        android:id="@+id/TV_RegTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/BT_Login"
        android:layout_marginBottom="28dp"
        android:text="@string/StringRegTips" />

    <Button
        android:id="@+id/BT_Reg"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TV_RegTips"
        android:layout_alignBottom="@+id/TV_RegTips"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@+id/TV_RegTips"
        android:text="@string/StringReg" />
    
</RelativeLayout>
